src/pj/poco/test/neg/NTYPE01.POC
/* test casting between pointers and function pointers */
#pragma poco echo "expect>type mismatch in pointer evaluation"

int i = 2;

int three()
{
return(3);
}

main()
{
char (*fpt)();

fpt = three;
puts("Should get a pointer mismatch");
}

